# spacetraders

./: .eslintrc  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
src/api/: __init__.py  enums.py  space_trader.py
src/site/: App.tsx  Home.tsx  Navigation.tsx  Router.tsx  main.tsx  routes.tsx
src/site/context/: AgentContext.tsx  AgentContextProvider.tsx
src/site/pages/: AgentData.tsx  Location.tsx  Login.tsx  Logout.tsx  Profile.tsx  Register.tsx
