[tool.poetry]
name = "spacetraders"
version = "0.1.0"
description = ""
authors = ["Buddy D <me@112buddyd.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ipython = "^8.22.2"
flask = "^3.0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
